// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthereumSig should create propose envelope 1`] = `
Object {
  "address": "0x0538D033B879aC94C709c1E408CC081345427379",
  "data": Object {
    "domain": Object {
      "chainId": 5,
      "name": "snapshot-x",
      "version": "1",
    },
    "message": Object {
      "authenticator": "0x06aac1e90da5df37bd59ac52b638a22de15231cbb78353b121df987873d0f369",
      "executionParams": Array [],
      "executionParamsHash": "0x049ee3eba8c1600700ee1b87eb599f16716b0b1022947733551fde4050ca6804",
      "executor": "0x070d94f64cfab000f8e26318f4413dfdaa1f19a3695e3222297edc62bbc936c7",
      "metadataUri": "ipfs://QmNrm6xKuib1THtWkiN5CKtBEerQCDpUtmgDqiaU2xDmca",
      "proposerAddress": "0x0538D033B879aC94C709c1E408CC081345427379000000000000000000000000",
      "salt": 0,
      "space": "0x04b7cff71219e275676e0ca23579f41b99dd1d1bd01adc7d7f1bc917d448e57d",
      "strategies": Array [
        0,
      ],
      "usedVotingStrategiesHash": "0x137c95c76862129847d0f5e3618c7a4c3822ee344f4aa80bcb897cb97d3e1600",
      "userVotingStrategyParamsFlatHash": "0x015f0739a3e1756fbc36b409a639e2d6d7690aba78a15c9669269717491ca1b4",
    },
    "types": Object {
      "Propose": Array [
        Object {
          "name": "authenticator",
          "type": "bytes32",
        },
        Object {
          "name": "space",
          "type": "bytes32",
        },
        Object {
          "name": "proposerAddress",
          "type": "bytes32",
        },
        Object {
          "name": "metadataUri",
          "type": "string",
        },
        Object {
          "name": "executor",
          "type": "bytes32",
        },
        Object {
          "name": "executionParamsHash",
          "type": "bytes32",
        },
        Object {
          "name": "usedVotingStrategiesHash",
          "type": "bytes32",
        },
        Object {
          "name": "userVotingStrategyParamsFlatHash",
          "type": "bytes32",
        },
        Object {
          "name": "salt",
          "type": "uint256",
        },
      ],
    },
  },
  "sig": "0x6af0cb3ea1a813de510cda2de695281e204a03507005b10240d7b0d4ffabab342b71f61ef3d1bcc04671fa942edb0f1efd34adbc5853d1c1135bff7fec023bdd1b",
}
`;

exports[`EthereumSig should create vote envelope 1`] = `
Object {
  "address": "0x0538D033B879aC94C709c1E408CC081345427379",
  "data": Object {
    "domain": Object {
      "chainId": 5,
      "name": "snapshot-x",
      "version": "1",
    },
    "message": Object {
      "authenticator": "0x06aac1e90da5df37bd59ac52b638a22de15231cbb78353b121df987873d0f369",
      "choice": 1,
      "proposal": 1,
      "salt": 0,
      "space": "0x04b7cff71219e275676e0ca23579f41b99dd1d1bd01adc7d7f1bc917d448e57d",
      "strategies": Array [
        0,
      ],
      "usedVotingStrategiesHash": "0x137c95c76862129847d0f5e3618c7a4c3822ee344f4aa80bcb897cb97d3e1600",
      "userVotingStrategyParamsFlatHash": "0x015f0739a3e1756fbc36b409a639e2d6d7690aba78a15c9669269717491ca1b4",
      "voterAddress": "0x0538D033B879aC94C709c1E408CC081345427379000000000000000000000000",
    },
    "types": Object {
      "Vote": Array [
        Object {
          "name": "authenticator",
          "type": "bytes32",
        },
        Object {
          "name": "space",
          "type": "bytes32",
        },
        Object {
          "name": "voterAddress",
          "type": "bytes32",
        },
        Object {
          "name": "proposal",
          "type": "uint256",
        },
        Object {
          "name": "choice",
          "type": "uint256",
        },
        Object {
          "name": "usedVotingStrategiesHash",
          "type": "bytes32",
        },
        Object {
          "name": "userVotingStrategyParamsFlatHash",
          "type": "bytes32",
        },
        Object {
          "name": "salt",
          "type": "uint256",
        },
      ],
    },
  },
  "sig": "0x85cf25b428dc2084e0e6527084fe1c757cf76aa655604847b26c196291cafb61228d08ebc0e4bf6035c3cbbaf52c73281771319c4b93760dec8b9484b3db5ef61b",
}
`;
